still trying to prevent body scrolling on ios when project modal is up

--- a/css/partials/_global.scss
+++ b/css/partials/_global.scss
@@ -84,7 +84,9 @@ figcaption{
   max-width: 500px;
 }
 
-
+.noscroll{
+  overflow: hidden;
+}
 
 
 
